<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">firebaseauth-android</string>

    <string name="login">Login</string>
    <string name="title_login">Welcome back!</string>
    <string name="subtitle_login">Login to your exiting account</string>
    <string name="helper_login">Don\'t have an account?</string>
    <string name="signIn">Sign In</string>

    <string name="signUp">Sign Up</string>
    <string name="title_register">Let\'s Get Started</string>
    <string name="subtitle_register">Create an account</string>
    <string name="helper_signUp">Already have an account?</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="or_divider">or</string>

    <string name="sign_out">Sign Out</string>

    <string name="welcome_dashnoard">Welcome to Firebase Auth</string>

    <string name="default_web_client_id" tools:ignore="TypographyDashes">480263474179-6np7enjs94dmpno3aguev2669f1q2she.apps.googleusercontent.com</string>

    <string name="invalid_email">Format email is invalid!</string>
    <string name="min_length_char">Minimal Length %1$d characters</string>
    <string name="message_validation">Enter your %1$s</string>
    <string name="login_error">Cannot Login, please check again!</string>
    <string name="signup_error">Cannot Signup, please check again!</string>
</resources>