<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.RegisterActivity">

    <!--  Start of Image  -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/signUp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginHorizontal="20dp"
        app:srcCompat="@drawable/image" />
    <!--  End of Image  -->

    <!--  Start of Title  -->
    <TextView
        android:id="@+id/tv_titleRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/title_register"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintBottom_toTopOf="@+id/tv_subtitleRegister"/>
    <!--  End of Title  -->

    <!--  Start of Subtitle  -->
    <TextView
        android:id="@+id/tv_subtitleRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/subtitle_register"
        android:textColor="@color/onPrimary"
        android:textSize="14sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleRegister"
        app:layout_constraintBottom_toTopOf="@+id/usernameEditTextLayout"/>
    <!--  End of Subtitle  -->

    <!--  Start of TextInput Layout Username  -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitleRegister"
        app:layout_constraintBottom_toTopOf="@+id/emailEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_regiter_username"
            android:hint="@string/username"
            android:fontFamily="@font/poppins_medium"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="15dp"
            android:autofillHints="name"
            android:minHeight="50dp"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--  End of TextInput Layout Username  -->

    <!--  Start of TextInput Layout Email  -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTextLayout"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_email"
            android:hint="@string/email"
            android:fontFamily="@font/poppins_medium"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="15dp"
            android:textSize="14sp"
            android:autofillHints="emailAddress"
            android:minHeight="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--  End of TextInput Layout Email  -->

    <!--  Start of TextInput Layout Password  -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        app:helperTextEnabled="true"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_password"
            android:hint="@string/password"
            android:fontFamily="@font/poppins_medium"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:autofillHints="emailAddress"
            android:minHeight="50dp"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--  End of TextInput Layout Password  -->

    <!--  Start of Button Register  -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/primary"
        android:text="@string/signUp"
        android:fontFamily="@font/poppins_medium"
        android:minHeight="50dp"
        app:cornerRadius="8dp"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />
    <!--  End of Button Register  -->

    <!--  Start of register -->
    <LinearLayout
        android:id="@+id/tv_haveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_helperRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/helper_signUp"
            android:textColor="@color/onPrimary"
            android:textSize="14sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/signIn"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"/>
    </LinearLayout>
    <!--  End of register  -->

    <!--  Start of Guide lines Vertical  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.50121653"
        app:layout_constraintStart_toStartOf="parent" />
    <!--  End of Guide lines Vertical  -->

    <!--  Start of Guide lines Horizontal -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent" />
    <!--  End of Guide lines Horizontal  -->

</androidx.constraintlayout.widget.ConstraintLayout>